--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 	<meta charset="utf-8">
 	<title>WebGL Test</title>
 	<script src="scripts/webgl-utils.js" type="text/javascript"></script>
-	<script src="scripts/glMatrix-0.9.5.min.js" type="text/javascript"></script>
+	<!--<script src="scripts/glMatrix-0.9.5.min.js" type="text/javascript"></script>-->
+	<script src="scripts/gl-matrix.js" type="text/javascript"></script>
 	<script src="scripts/wgl.js" type="text/javascript"></script>
 	<script src="scripts/wgl.lib.shaders.js" type="text/javascript"></script>
 	<script src="scripts/wgl.lib.primitives.js" type="text/javascript"></script>
+	<script src="scripts/wgl.raycast.js" type="text/javascript"></script>
+	
+	<link href="css/jquery.contextMenu.min.css" rel="stylesheet" type="text/css" />
+	<link href="css/title.css" rel="stylesheet" type="text/css" />
+	<script src="scripts/jquery-3.3.1.min.js" type="text/javascript"></script>
+	<script src="scripts/jquery.ui.position.min.js" type="text/javascript"></script>
+	<script src="scripts/jquery.contextMenu.min.js" type="text/javascript"></script>
+	
 </head>
 <body>
 
@@ -17,52 +26,120 @@
 	var container = document.getElementById("webgl_content");
 	var instance = new WGL.Instance(container);
 	
-	obj = new WGL.Lib.Primitives.Sphere(100,100,1);
+	var obj = new WGL.Lib.Primitives.Sphere(100,100,1);
 	obj.shaders=[new WGL.Lib.Shaders.FragmentShader.Textured(),new WGL.Lib.Shaders.VertexShader.Textured()]
 	obj.textureSrc="images/tokyo.jpg";
-	obj.position=[0,0,-2];
+	obj.position=[0,0,0];
 	obj.scale=[5,5,5];
 	instance.objects.push(obj);
+	
+	var obj2 = new WGL.Lib.Primitives.Sphere(100,100,1);
+	obj2.shaders=[new WGL.Lib.Shaders.FragmentShader.Textured(),new WGL.Lib.Shaders.VertexShader.Textured()]
+	obj2.textureSrc="images/red.png";
+	obj2.position=[-1,0,-2];
+	obj2.scale=[0.1,0.1,0.1];
+	instance.objects.push(obj2);
+	
+	var obj3 = new WGL.Lib.Primitives.Sphere(100,100,1);
+	obj3.shaders=[new WGL.Lib.Shaders.FragmentShader.Textured(),new WGL.Lib.Shaders.VertexShader.Textured()]
+	obj3.textureSrc="images/green.png";
+	obj3.position=[2,1,-3];
+	obj3.scale=[0.3,0.3,0.3];
+	instance.objects.push(obj3);
+	
+	var obj4 = new WGL.Lib.Primitives.Sphere(100,100,1);
+	obj4.shaders=[new WGL.Lib.Shaders.FragmentShader.Textured(),new WGL.Lib.Shaders.VertexShader.Textured()]
+	obj4.textureSrc="images/blue.png";
+	obj4.position=[0,-1,-4];
+	obj4.scale=[0.2,0.2,0.2];
+	instance.objects.push(obj4);
 	
 	instance.prepare();
 	
 	//rotation
 	var mouseDown = false;
-	var lastMouseX = null;
-	var lastMouseY = null;
+    var lastMouseX = null;
+    var lastMouseY = null;
 	
 	container.onmousedown = handleMouseDown;
 	document.onmouseup = handleMouseUp;
 	document.onmousemove = handleMouseMove;
 	
 	function handleMouseDown(event) {
-		mouseDown = true;
-		lastMouseX = event.clientX;
-		lastMouseY = event.clientY;
+		if (event.button==0)
+		{
+			mouseDown = true;
+			lastMouseX = event.clientX;
+			lastMouseY = event.clientY;
+		}
     }
+	
+	var raycast = new WGL.Raycast(instance);
+	
+	var lastMouseUpEvent={};
     function handleMouseUp(event) {
-        mouseDown = false;
-    }
+		if (event.button==0)
+		{
+			mouseDown = false;
+		}
+		if (event.button==2)
+		{
+			lastMouseUpEvent=event;
+		}
+	}
     function handleMouseMove(event) {
         if (!mouseDown) {
             return;
         }
-		var newX = event.clientX;
-		var newY = event.clientY;
-		var deltaX = newX - lastMouseX
-		instance.objects[0].rotation[1]+=deltaX/10;
-		var deltaY = newY - lastMouseY;
-		instance.objects[0].rotation[0]+=deltaY/5;
-		lastMouseX = newX
-		lastMouseY = newY;
+        var newX = event.clientX;
+        var newY = event.clientY;
+        var deltaX = newX - lastMouseX
+		obj.rotation[1]+=deltaX/10;
+        var deltaY = newY - lastMouseY;
+		obj.rotation[0]+=deltaY/5;
+        lastMouseX = newX
+        lastMouseY = newY;
     }
 	
 	tick();
-
+	
 	function tick() {
-		requestAnimFrame(tick);
-		instance.drawScene();
-	}
+        requestAnimFrame(tick);
+        instance.drawScene();
+    }
+</script>
+
+<script>
+    $(function() {
+        $.contextMenu({
+            selector: '#webgl_content', 
+			className: 'data-title',
+			hideOnSecondTrigger:true,
+			events: {
+				show : function(options){
+					outHit= new WGL.Raycast.Hit();	
+					raycast.RaycastFromMouse(outHit,lastMouseUpEvent,100);
+					$('.data-title').attr('data-menutitle', "Object #"+ outHit.objectId+" distance=" + Math.round(outHit.hitDistance * 100)/100);
+				}
+			},
+            callback: function(key, options) {
+                var m = "clicked: " + key;
+                //window.console && console.log(m) || alert(m); 
+            },
+            items: {
+                "edit": {name: "Edit", icon: "edit"},
+                "delete": {name: "Delete", icon: "delete"},
+                "sep1": "---------",
+                "quit": {name: "Quit", icon: function(){
+                    return 'context-menu-icon context-menu-icon-quit';
+                }}
+            }
+        });
+
+        $('.context-menu-one').on('click', function(e){
+            console.log('clicked', this);
+        })    
+    });
 </script>
 
 </body>
